crates/telemetry-adapters/src/snapshots/openracing_telemetry_adapters__forza__tests__forza_cardash_full.snap
---
source: crates/telemetry-adapters/src/forza.rs
assertion_line: 1133
expression: result
---
speed_ms: 35
steering_angle: 0.11811024
throttle: 0.78431374
brake: 0
clutch: 0
rpm: 7200
max_rpm: 8000
gear: 4
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  boost_psi:
    type: Float
    value: 0
  power_w:
    type: Float
    value: 0
  suspension_travel_fl:
    type: Float
    value: 0
  suspension_travel_fr:
    type: Float
    value: 0
  suspension_travel_rl:
    type: Float
    value: 0
  suspension_travel_rr:
    type: Float
    value: 0
  tire_slip_ratio_fl:
    type: Float
    value: 0
  tire_slip_ratio_fr:
    type: Float
    value: 0
  tire_slip_ratio_rl:
    type: Float
    value: 0
  tire_slip_ratio_rr:
    type: Float
    value: 0
  torque_nm:
    type: Float
    value: 0
  wheel_speed_fl:
    type: Float
    value: 0
  wheel_speed_fr:
    type: Float
    value: 0
  wheel_speed_rl:
    type: Float
    value: 0
  wheel_speed_rr:
    type: Float
    value: 0
sequence: 0
